--- a/css/my/online_service.scss
+++ b/css/my/online_service.scss
@@ -15,7 +15,7 @@
     overflow-y: scroll;
     height: 37.857em;
     &::-webkit-scrollbar {
-        width:.714em;
+        width:0.357em;
         position: absolute;
         left: 0;
       }
